Enable Java 19 preview features on running the app